--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-lg-3">
+        <div class="col-lg-6 offset-lg-3">
           <div class="form-one">
             <app-root></app-root>
           </div>
